# n8ngd

./: .gitignore  AGENTS.md  README.md  create-desktop-shortcut.ps1  pyproject.toml  run.ps1
jobs2google/: authorize_jobs2google.py  keywords.json  keywords_ind.json  process-jobs.py  process_jobs.py  process_jobs_lib.py  test_process_jobs.ps1
n8ngd/: __init__.py  __main__.py  app_paths.py  file_service.py  google_drive_service.py  logging_service.py  main.py  mainwindow.py  settings_service.py  upload_service.py
