[project]
name = "n8ngd"
version = "0.1.3"
description = "PySide6 desktop tool for uploading files to n8n."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["n8ngd*"]
